# gacquard

./: .gitignore  Makefile  Makefile.am  README  andremasella-gacquard.xml  configure.ac  gacquard.1  gacquard.desktop  gacquard.schemas  gacquard.vala  history1.txt  loom.vala  mayNeedThis.txt  mayNeedThis2.txt  readme.txt  remember.txt
debian/: changelog  control  copyright
